fixes contrast error, further update accessibility readme file.

--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -62,7 +62,7 @@
 }
 
 .business {
-	color: #7e9fb8;
+	color: #7e96b8;
 	font-size: 32px;
 }
 
@@ -113,7 +113,7 @@
 	margin-top: 8px;
 	background-color: #f6f6f7;
 	padding: 0.3em;
-	border: 1.5px solid #7e9fb8;
+	border: 1.5px solid #7e96b8;
 	border-radius: 4px;
 }
 
