--- a/src/app/components/SkipLink/SkipLink.module.css
+++ b/src/app/components/SkipLink/SkipLink.module.css
@@ -1,6 +1,6 @@
 .skipLink {
     position: absolute;
-    /* left: -10000px; */
+    left: -10000px;
     top: auto;
     width: 1px;
     height: 1px;
