--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -43,7 +43,7 @@
   width: 100%;
   padding: 0.6em;
   padding-left: 1em;
-  border: 1px solid #7e9fb8;
+  border: 1px solid #4F6D85;
   border-radius: 4px;
 }
 
@@ -54,8 +54,8 @@
 }
 
 .button {
-  color: white;
-  background-color: #7e9fb8;
+  color: #ffffff;
+  background-color: #4F6D85;
   border: none;
   border-radius: 4px;
   padding: 5px 26px;
